# segway_project

./: README
segway_control/: CMakeLists.txt  package.xml
segway_control/config/: segway_control.yaml
segway_control/launch/: segway_control.launch
segway_control/scripts/: segway_PD_controller.py  segway_PD_plus_feedforward_controller.py  segway_computed_torque_controller.py  trajectory.csv
segway_description/: CMakeLists.txt  package.xml
segway_description/launch/: segway.rviz  segway_rviz.launch
segway_description/urdf/: segway.gazebo  segway.xacro
segway_gazebo/: CMakeLists.txt  package.xml
segway_gazebo/launch/: segway_world.launch
