<package>
  <name>segway_gazebo</name>
  <version>0.1.0</version>
  <description>segway_gazebo</description>
  <maintainer email="apknut@gmail.com">Knut Peterson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <!--<run_depend>scara_control</run_depend>-->
  <run_depend>segway_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
